--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/style.css" rel='stylesheet' />
   </head>
   <body>
-    <div id="content">
+    <div id="root">
         <div class="loader">Loading...</div>
     </div>
     <script type="text/javascript" src="/bundle.js"></script>
