--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>adslot Media</title>
+    <title>Bambora Back Office</title>
     <link href="/style.css" rel='stylesheet' />
   </head>
   <body>
