bamborify it before hosting it in dev-vm01

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cool Back Office</title>
+    <title>Bambora Back Office</title>
     <link href="/style.css" rel='stylesheet' />
     <link href='/font-icons/style.css' ref='stylesheet' />
   </head>
